--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "mini-css-extract-plugin": "^0.4.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "redux": "^4.0.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "react-redux": "^5.1.0",
+    "redux-thunk": "^2.3.0"
   }
 }
