--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.5",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
@@ -27,6 +28,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react-redux": "^5.1.0",
     "redux-thunk": "^2.3.0"
   }
